2013-02-04  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_config.php: Added the config variable
	  netflow_disable_custom_lvfilters.

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/events.php: fixed exotic bug with the var name
	history in the javascript.

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: re-enabled the baseline for the
	reports.
	
	Fixes: #3599961

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: fixed the
	ovewrite the var $sql from netflow filter.
	
	Fixes: #3602194

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_xml.php, include/functions_reporting.php,
	operation/reporting/reporting_xml.php: fixed the SLA agent name
	with entities differents to hexadecimal entities. And fixed the
	serialized data when has not separators.
	
	Fixes: #3602204

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: fixed lost
	global var $meta in the SLA table.
	
	Fixes: #3602721

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/search_modules.php: fixed the image to edit.
	
	* include/functions_html.php: fixed check string values in function
	"html_print_input_hidden".
	
	Fixes: #3603084

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/search_modules.php: added edit button when the user can
	edit.

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* install.php: cleaned source code style.
	
	* godmode/netflow/nf_edit.php, include/functions_netflow.php: fixed
	the empty data.
	
	Fixes: #3603092

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora_alerts.js: cleaned source code style.
	
	* include/functions_graph.php: added lost function
	"graph_events_validated".
	
	Fixes: #3603110

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	